<resources>
    <string name="About_1601128430_b794eb9e4a_activity_title">About</string>
    <string name="About_1601128430_b794eb9e4a_description" />
    <string name="About_1601128430_b794eb9e4a_facebook" />
    <string name="About_1601128430_b794eb9e4a_googleplus" />
    <string name="About_1601128430_b794eb9e4a_linkedin" />
    <string name="About_1601128430_b794eb9e4a_name" />
    <string name="About_1601128430_b794eb9e4a_title" />
    <string name="About_1601128430_b794eb9e4a_twitter" />
    <string name="About_1601128430_b794eb9e4a_website" />
    <string name="Custompage_1601126045_8a479573a2_activity_title">OUR FREE COURSES</string>
    <string name="Custompage_1601126045_8a479573a2_webview_content">file:///android_asset/Custompage_1601126045_8a479573a2/index.html</string>
    <string name="Dashboard_000_activity_title">Home</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_1601128430_b794eb9e4a_background_image_url" />
    <string name="about_1601128430_b794eb9e4a_image_url" />
    <string name="about_1601128430_b794eb9e4a_square_image_url" />
    <string name="about_1601128430_b794eb9e4a_wide_image_url" />
    <string name="about_dialog_analytics_notice">This app may collect anonymous usage data.</string>
    <string name="about_dialog_andromo_blurb">Powered by %1$s</string>
    <string name="about_dialog_app_version">&lt;b&gt;Version %1$s&lt;/b&gt;</string>
    <string name="about_dialog_build_version">Build version %1$s</string>
    <string name="about_dialog_copyright">Copyright © %1$s</string>
    <string name="about_dialog_custom_text" />
    <string name="about_dialog_developed_by">Developed by %1$s</string>
    <string name="about_dialog_title">About %1$s</string>
    <string name="accept">Accept</string>
    <string name="activity_chooser_view_see_all">See all...</string>
    <string name="activity_class_000_01">Custompage_1601126045_8a479573a2</string>
    <string name="activity_class_000_02">About_1601128430_b794eb9e4a</string>
    <string name="activity_class_000_10000">Dashboard_000</string>
    <string name="activity_description_000_01">TRY OUR FREE COURSES\10https://www.youtube.com/channel/UCzWuZ6kNIU1r2xoGZ2j7VTw</string>
    <string name="activity_description_000_02">STUDY HUNGER is an online education platform that gives full courses for free from Class 7th to 12th where we help every student throughout the year to easily understand topics and perform well in NCERT etc.\10</string>
    <string name="activity_description_000_10000" />
    <string name="activity_launcher_name">Dashboard_000</string>
    <string name="activity_subtitle_000_01" />
    <string name="activity_subtitle_000_02" />
    <string name="activity_subtitle_000_10000" />
    <string name="activity_title_000_01">OUR FREE COURSES</string>
    <string name="activity_title_000_02">About</string>
    <string name="activity_title_000_10000">Home</string>
    <string name="admob_pubid" />
    <string name="admob_pubid_user" />
    <string name="airbop_prefs_enable_notification_light_summary">On/Off</string>
    <string name="airbop_prefs_enable_notification_light_title">Enable Notification Light</string>
    <string name="airbop_prefs_enable_notification_sound_summary">On/Off</string>
    <string name="airbop_prefs_enable_notification_sound_title">Enable Notification Sound</string>
    <string name="airbop_prefs_enable_notifications_summary">On/Off</string>
    <string name="airbop_prefs_enable_notifications_title">Enable Notifications</string>
    <string name="airbop_prefs_notifications_category">App Notification Messages</string>
    <string name="alarm_sound">alarm sound</string>
    <string name="analytics_prefs_enable_analytics_summary_off">Off (not sending anything)</string>
    <string name="analytics_prefs_enable_analytics_summary_on">On (anonymous usage data may be sent)</string>
    <string name="analytics_prefs_enable_analytics_title">Allow this app to collect anonymous usage data.</string>
    <string name="analytics_prefs_usage_data_category">Usage Data</string>
    <string name="app_name">STUDY HUNGER</string>
    <string name="app_theme_background_image_url" />
    <string name="app_theme_image_url" />
    <string name="app_theme_square_image_url" />
    <string name="app_theme_wide_image_url" />
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ask_to_install_adobe_reader">This feature requires Adobe Reader.\10\10Do you want to install it now?</string>
    <string name="audio_context_menu_alarm_sound">Set as default alarm sound</string>
    <string name="audio_context_menu_cancel_download">Cancel download</string>
    <string name="audio_context_menu_delete">Delete downloaded file</string>
    <string name="audio_context_menu_download">Download</string>
    <string name="audio_context_menu_download_and_play">Download and play</string>
    <string name="audio_context_menu_notification_sound">Set as notification sound</string>
    <string name="audio_context_menu_pause">Pause</string>
    <string name="audio_context_menu_play">Play</string>
    <string name="audio_context_menu_rewind">Rewind</string>
    <string name="audio_context_menu_ringtone">Set as ringtone</string>
    <string name="audio_context_menu_share">Share</string>
    <string name="audio_context_menu_stop">Stop</string>
    <string name="audio_context_menu_stream">Stream</string>
    <string name="audio_context_menu_title">Choose Action:</string>
    <string name="audio_context_menu_track_info">Show track info</string>
    <string name="audio_manager_notification_channel">Audio Manager</string>
    <string name="audio_notification_loading">loading</string>
    <string name="audio_notification_paused">paused</string>
    <string name="audio_notification_playing">playing</string>
    <string name="audio_notification_saving">Saving</string>
    <string name="audio_options_menu_cancel_download">Cancel download</string>
    <string name="audio_options_menu_delete">Delete downloaded file</string>
    <string name="audio_options_menu_download">Download</string>
    <string name="audio_options_menu_goto_current_track">Go to current track</string>
    <string name="audio_options_menu_repeat_mode">Repeat Mode</string>
    <string name="audio_options_menu_repeat_mode_all">All Songs</string>
    <string name="audio_options_menu_repeat_mode_off">Off</string>
    <string name="audio_options_menu_repeat_mode_single">Current Song</string>
    <string name="audio_options_menu_rewind">Rewind</string>
    <string name="audio_options_menu_shuffle_off">Off</string>
    <string name="audio_options_menu_shuffle_on">On</string>
    <string name="audio_options_menu_shuffle_songs">Shuffle Songs</string>
    <string name="audio_options_menu_stop">Stop</string>
    <string name="audio_prefs_default_play_mode_title">Default play mode</string>
    <string name="audio_prefs_podcast_settings_category">Podcast Settings</string>
    <string name="audio_shuffle_is_off">Shuffle is off.</string>
    <string name="audio_shuffle_is_on">Shuffle is on.</string>
    <string name="audio_stream_error">Audio stream error -- playback halted.</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="buffering">Buffering...</string>
    <string name="buffering_track">Buffering: %1$s</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="contact_us_address_heading">ADDRESS</string>
    <string name="contact_us_email_heading">EMAIL</string>
    <string name="contact_us_phone_heading">PHONE</string>
    <string name="contact_us_phone_label_fax">FAX</string>
    <string name="contact_us_phone_label_home">HOME</string>
    <string name="contact_us_phone_label_mobile">MOBILE</string>
    <string name="contact_us_phone_label_work">OFFICE</string>
    <string name="contact_us_website_heading">WEBSITE</string>
    <string name="contacts_app_not_available">Contacts application is not available.</string>
    <string name="context_menu_set_as_contact_icon">Set as contact icon</string>
    <string name="custompage_1601126045_8a479573a2_background_image_url" />
    <string name="custompage_1601126045_8a479573a2_image_url" />
    <string name="custompage_1601126045_8a479573a2_square_image_url" />
    <string name="custompage_1601126045_8a479573a2_wide_image_url" />
    <string name="dashboard_000_background_image_url" />
    <string name="dashboard_000_image_url" />
    <string name="dashboard_000_square_image_url" />
    <string name="dashboard_000_wide_image_url" />
    <string name="decline">Decline</string>
    <string name="default_download_manager_title">Downloading: %1$s</string>
    <string name="dialer_not_available">The dialer is not available.</string>
    <string name="download_successful">Download Successful</string>
    <string name="downloaded_file_deleted">File deleted.</string>
    <string name="downloading_ringtone_message">Downloading \"%1$s\"...</string>
    <string name="downloading_x_bytesize">Downloading %1$.1f %2$s</string>
    <string name="downloading_x_of_y_bytesize">Downloading %1$.1f of %2$.1f %3$s</string>
    <string name="drawer_about_title">About %1$s</string>
    <string name="drawer_header_subtitle" />
    <string name="drawer_header_title" />
    <string name="drawer_root_item_title">Home</string>
    <string name="drawer_settings_title">Settings</string>
    <string name="error_accessing_audio_file">Error accessing audio file.</string>
    <string name="error_could_not_download_audio_file">Unable to set %1$s - could not download audio file.</string>
    <string name="static_ad_subtitle">Super easy. No coding. Free signup!</string>
    <string name="static_ad_title">Create Your Own Android App</string>
    <string name="static_ad_url">www.andromo.com</string>
</resources>