<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar android:theme="?attr/toolbar_theme" android:id="@+id/toolbar" android:background="?attr/colorPrimary" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" app:layout_scrollFlags="?attr/toolbar_scroll_flags" app:popupTheme="?attr/toolbar_popup_theme"/>
    <FrameLayout android:id="@+id/about_content" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <ScrollView android:paddingLeft="0dp" android:paddingTop="2dp" android:paddingRight="0dp" android:paddingBottom="0dp" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
            <LinearLayout android:orientation="vertical" android:paddingBottom="0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="0dp">
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:linksClickable="true" android:id="@+id/app_version" android:padding="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="0dp"/>
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:linksClickable="true" android:id="@+id/app_developer" android:paddingLeft="12dp" android:paddingTop="0dp" android:paddingRight="12dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="0dp" android:text="@string/about_dialog_developed_by"/>
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:id="@+id/about_andromo" android:paddingLeft="12dp" android:paddingTop="0dp" android:paddingRight="12dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_dialog_andromo_blurb"/>
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:id="@+id/analytics_notice" android:paddingLeft="12dp" android:paddingTop="0dp" android:paddingRight="12dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_dialog_analytics_notice"/>
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:id="@+id/custom_text" android:paddingLeft="12dp" android:paddingTop="0dp" android:paddingRight="12dp" android:paddingBottom="12dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_dialog_custom_text"/>
                <View android:id="@+id/about_separator" android:background="?android:attr/dividerHorizontal" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="0dp" android:layout_marginTop="6dp" android:layout_marginRight="0dp" android:layout_marginBottom="0dp"/>
                <RelativeLayout android:id="@+id/andromo_banner" android:background="#fff" android:paddingTop="12dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp">
                    <ImageView android:id="@+id/andromo_logo" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/andromo_logo" android:layout_centerHorizontal="true"/>
                </RelativeLayout>
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/copyright" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="6dp" android:text="@string/about_dialog_copyright"/>
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/build_version" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="0dp" android:layout_marginBottom="16dp" android:text="@string/about_dialog_build_version"/>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>
