<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/adView" android:layout_width="match_parent" android:layout_height="90dp">
    <LinearLayout android:orientation="horizontal" android:id="@+id/layout_text1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ImageView android:gravity="center_vertical" android:layout_gravity="center" android:id="@+id/static_ad_logo" android:layout_width="90dp" android:layout_height="90dp" android:src="@drawable/static_ad_logo" android:scaleType="centerInside"/>
        <ViewFlipper android:layout_gravity="center_vertical" android:id="@+id/layout_text2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:inAnimation="@anim/push_up_in" android:outAnimation="@anim/push_up_out" android:flipInterval="3000" android:autoStart="true">
            <TextView android:layout_gravity="center_vertical" android:id="@+id/static_ad_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:text="@string/static_ad_title" android:singleLine="false" style="@style/AndromoAdTitleText.Large"/>
            <TextView android:layout_gravity="center_vertical" android:id="@+id/static_ad_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:text="@string/static_ad_subtitle" android:singleLine="false" style="@style/AndromoAdSubTitleText.Large"/>
            <TextView android:layout_gravity="center_vertical" android:id="@+id/static_ad_url" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:text="@string/static_ad_url" android:singleLine="true" style="@style/AndromoAdURLText.Large"/>
        </ViewFlipper>
    </LinearLayout>
</RelativeLayout>
